Version 0.11.2 (legolas558,pvhl)
* preliminary support for section anchors in querystring page requests
* fixed import issue related to 'var' declarations inside content pages (found by deroock)
* converted source code from array notation to dot notation (pvhl)
* fixed help pages browsing issue with IE (deroock)

Version 0.11.1 (legolas558) released 2010-03-26
* added 'wsif.generator' header to generated WSIF files
* fixed bugs 2975523, 2969920 regarding Include::Image:: wiki links (reported by sonofdog, brianedwards9)
* fixed title restore glitches when exiting edit mode
* fixed bug 2976153 renaming a page fails (reported by d6095t)
* fixed bugs 2968654,2976459 javascript error when retrieving local filename in IE (reported by deroock, KHS)
* fixed bug 2976695 special pages being shown in most special listings (reported by deroock)
* fixed bug 2976719 set key and help icons don't fail gracefully in IE6 (reported by d6095t)
* added internationalization for "Editing" string shown in title when editing a page

Version 0.11.0 (legolas558) released 2010-03-13
* fixed import/save issues with IE (2968654, reported by KHS)
* fixed home button not working (2969514, reported by deroock)
* added default macro 'include' for advanced transclusion
* fixed bug regarding new pages not being saved (2969247, reported by mk-berlin)
* documentation fixes and extension

Version 0.10.9 (legolas558) released 2010-03-12
* added some style from Stanky's WoaS
* fixed save feature for IE (reported by J.Rosink)
* added WoaS logo to left of title
* border widths will now display properly in Chrome and other browsers
* "<" and ">" are now forbidden in titles
* added title attributes to editor buttons (by littlegirl, suggested by ChrisClemson)

Version 0.10.8 (legolas558) released 2010-03-11
* faster AES encryption/decryption (thanks to dixon)
* various user interface improvements and bugfixes
* fixed load/save bugs with IE